# tracing-opentelemetry-instrumentation-sdk

./: .editorconfig  .envrc  .gitignore  .mega-linter.yml  .mise.toml  .rtx.toml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml  justfile  mega-linter.sh  release-plz.toml  release.toml  renovate.json5
.github/: FUNDING.yml
axum-tracing-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
axum-tracing-opentelemetry/src/: lib.rs
axum-tracing-opentelemetry/src/middleware/: mod.rs  response_injector.rs  trace_extractor.rs  trace_extractor.rs.wip
axum-tracing-opentelemetry/src/middleware/snapshots/: axum_tracing_opentelemetry__middleware__trace_extractor__tests__call_with_w3c_trace.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__call_with_w3c_trace_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__empty_http_route_for_nonexisting_route.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__empty_http_route_for_nonexisting_route_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__extract_route_from_nested.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__extract_route_from_nested_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__filled_http_headers.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__filled_http_headers_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__filled_http_route_for_existing_route.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__filled_http_route_for_existing_route_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__grpc_status_code_on_close_for_ok.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__grpc_status_code_on_close_for_ok_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__status_code_on_close_for_error.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__status_code_on_close_for_error_otel_spans.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__status_code_on_close_for_ok.snap  axum_tracing_opentelemetry__middleware__trace_extractor__tests__status_code_on_close_for_ok_otel_spans.snap  (+4 more)
axum-tracing-opentelemetry/src/tools/: mock_collector.rs  resource.rs  tracing_subscriber_ext.rs
examples/axum-otlp/: Cargo.toml  README.md  k6-script.js
examples/axum-otlp/src/: main.rs
examples/bug_234_tls/: Cargo.toml
examples/bug_234_tls/src/: main.rs
examples/grpc/: Cargo.toml  build.rs
examples/grpc/proto/: helloworld.proto
examples/grpc/src/: client.rs  server.rs
examples/init-tracing-with/: Cargo.toml
examples/init-tracing-with/src/: main.rs
examples/load/: Cargo.toml  README.md
examples/load/src/: main.rs
examples/otlp/: Cargo.toml  README.md
examples/otlp/src/: main.rs
fake-opentelemetry-collector/: CHANGELOG.md  Cargo.toml  README.md
fake-opentelemetry-collector/src/: common.rs  lib.rs  logs.rs  metrics.rs  trace.rs
fake-opentelemetry-collector/src/snapshots/: fake_opentelemetry_collector__tests__fake_logger_and_collector.snap  fake_opentelemetry_collector__tests__fake_tracer_and_collector.snap
fake-opentelemetry-collector/tests/: demo_log.rs  demo_metrics.rs  demo_trace.rs
fake-opentelemetry-collector/tests/snapshots/: demo_log__demo_fake_logger_and_collector.snap  demo_metrics__demo_fake_meter_and_collector.snap  demo_trace__demo_fake_tracer_and_collector.snap
init-tracing-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
init-tracing-opentelemetry/src/: config.rs  error.rs  formats.rs  jaeger.rs  lib.rs  metrics.rs  otlp.rs  resource.rs  stdio.rs  tracing_subscriber_ext.rs
init-tracing-opentelemetry/src/otlp/: logs.rs  metrics.rs  mod.rs  traces.rs
testing-tracing-opentelemetry/: Cargo.toml
testing-tracing-opentelemetry/src/: lib.rs
testing-tracing-opentelemetry/src/snapshots/: testing_tracing_opentelemetry__call_with_w3c_trace.snap  testing_tracing_opentelemetry__call_with_w3c_trace_otel_spans.snap  testing_tracing_opentelemetry__empty_http_route_for_nonexisting_route.snap  testing_tracing_opentelemetry__empty_http_route_for_nonexisting_route_otel_spans.snap  testing_tracing_opentelemetry__extract_route_from_nested.snap  testing_tracing_opentelemetry__extract_route_from_nested_otel_spans.snap  testing_tracing_opentelemetry__filled_http_headers.snap  testing_tracing_opentelemetry__filled_http_headers_otel_spans.snap  testing_tracing_opentelemetry__filled_http_route_for_existing_route.snap  testing_tracing_opentelemetry__filled_http_route_for_existing_route_otel_spans.snap  testing_tracing_opentelemetry__grpc_status_code_on_close_for_ok.snap  testing_tracing_opentelemetry__grpc_status_code_on_close_for_ok_otel_spans.snap  testing_tracing_opentelemetry__status_code_on_close_for_error.snap  testing_tracing_opentelemetry__status_code_on_close_for_error_otel_spans.snap  testing_tracing_opentelemetry__status_code_on_close_for_ok.snap  testing_tracing_opentelemetry__status_code_on_close_for_ok_otel_spans.snap  testing_tracing_opentelemetry__trace_id_in_child_span.snap  testing_tracing_opentelemetry__trace_id_in_child_span_for_remote.snap  testing_tracing_opentelemetry__trace_id_in_child_span_for_remote_otel_spans.snap  testing_tracing_opentelemetry__trace_id_in_child_span_otel_spans.snap
tonic-tracing-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
tonic-tracing-opentelemetry/src/: lib.rs
tonic-tracing-opentelemetry/src/middleware/: client.rs  filters.rs  mod.rs  server.rs  trace_extractor.rs
tonic-tracing-opentelemetry/src/tracing_opentelemetry_instrumentation_sdk/: mod.rs  span_type.rs
tracing-opentelemetry-instrumentation-sdk/: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
tracing-opentelemetry-instrumentation-sdk/src/: lib.rs  span_type.rs
tracing-opentelemetry-instrumentation-sdk/src/http/: grpc.rs  grpc_client.rs  grpc_server.rs  http_server.rs  mod.rs  opentelemetry_http.rs  opentelemety_http.rs  tools.rs
(+53 files in other folders)
