[workspace]
resolver = "2"
members = [
  "axum-tracing-opentelemetry",
  "examples/*",
  "fake-opentelemetry-collector",
  "init-tracing-opentelemetry",
  "testing-tracing-opentelemetry",
  "tonic-tracing-opentelemetry",
  "tracing-opentelemetry-instrumentation-sdk",
]

exclude = ["target"]

[workspace.package]
edition = "2021"
version = "0.19.0"
authors = ["David Bernard"]
license = "CC0-1.0"
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk"
repository = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk"
rust-version = "1.80.0"

[workspace.dependencies]
http = "^1"
opentelemetry = { version = "0.24", features = [
  "trace",
], default-features = false }
opentelemetry_sdk = { version = "0.24.1", default-features = false, features = [
  "rt-tokio",
] }
opentelemetry-aws = { version = "0.12", default-features = false }
opentelemetry-jaeger = { version = "0.22", default-features = false }
opentelemetry-jaeger-propagator = { version = "0.3", default-features = false }
opentelemetry-resource-detectors = { version = "0.3", default-features = false }
opentelemetry-semantic-conventions = { version = "0.16", default-features = false }
opentelemetry-zipkin = { version = "0.22", default-features = false }
opentelemetry-otlp = { version = "0.17", default-features = false }
opentelemetry-proto = { version = "0.7", default-features = false }
opentelemetry-stdout = { version = "0.5" }
tonic = { version = "0.12", default-features = false } #should be sync with opentelemetry-proto
tracing = "0.1"
tracing-opentelemetry = "0.25"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"
