[workspace]
resolver = "2"
members = [
  "axum-tracing-opentelemetry",
  "examples/*",
  "fake-opentelemetry-collector",
  "init-tracing-opentelemetry",
  "testing-tracing-opentelemetry",
  "tonic-tracing-opentelemetry",
  "tracing-opentelemetry-instrumentation-sdk",
]

exclude = ["target"]

[workspace.package]
edition = "2021"
version = "0.32.0"
authors = ["David Bernard"]
license = "CC0-1.0"
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk"
repository = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk"
rust-version = "1.83.0"

[workspace.dependencies]
assert2 = "0.3"
axum = { version = "0.8", default-features = false }
http = "^1"
hyper = "1"
insta = { version = "^1", features = ["redactions", "yaml"] }
opentelemetry = { version = "0.31", features = [
  "trace",
], default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
  "rt-tokio",
] }
opentelemetry-aws = { version = "0.19", default-features = false }
opentelemetry-jaeger-propagator = { version = "0.31", default-features = false }
opentelemetry-resource-detectors = { version = "0.10", default-features = false }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry-zipkin = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", default-features = false }
opentelemetry-proto = { version = "0.31", default-features = false }
opentelemetry-stdout = { version = "0.31" }
rstest = "0.26"
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tonic = { version = "0.14", default-features = false } #should be sync with opentelemetry-proto
tower = { version = "0.5", default-features = false }
tracing = "0.1"
tracing-opentelemetry = "0.32"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"
