[package]
name = "axum-tracing-opentelemetry"
description = "Middlewares and tools to integrate axum + tracing + opentelemetry"
version = "0.12.0-alpha.2"
edition = "2021"
readme = "README.md"
license = "CC0-1.0"
keywords = ["axum", "tracing", "opentelemetry"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "web-programming",
]
repository = "https://github.com/davidB/toolkit-tracing-opentelemetry"
homepage = "https://github.com/davidB/toolkit-tracing-opentelemetry/axum-tracing-opentelemetry"

[dependencies]
axum = "0.6"
futures-core = "0.3"
futures-util = { version = "0.3", default_features = false, features = [] }
http = "0.2"
opentelemetry = { version = "0.19", features = [
  "rt-tokio",
  "trace",
], default-features = false }
pin-project-lite = "0.2"
tower = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-opentelemetry-instrumentation-sdk = { path = "../tracing-opentelemetry-instrumentation-sdk", features = [
  "http",
] }

[dev-dependencies]
fake-opentelemetry-collector = { path = "../fake-opentelemetry-collector" }
testing-tracing-opentelemetry = { path = "../testing-tracing-opentelemetry" }
assert2 = "0.3"
hyper = "0.14"
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
opentelemetry-otlp = { version = "0.12", features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry_api = "0.19"
opentelemetry-proto = { version = "0.2", features = ["gen-tonic", "traces"] }
rstest = "0.17"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
tokio-stream = { version = "0.1", features = ["net"] }
# need tokio runtime to run smoke tests.
opentelemetry_sdk = { features = [
  "trace",
  "rt-tokio",
  "testing",
], version = "0.19" }
