[package]
name = "axum-tracing-opentelemetry"
description = "Middlewares and tools to integrate axum + tracing + opentelemetry"
readme = "README.md"
keywords = ["axum", "tracing", "opentelemetry"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "web-programming",
]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/tree/main/axum-tracing-opentelemetry"
rust-version.workspace = true
edition.workspace = true
version = "0.18.1"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
futures-core = "0.3"
futures-util = { version = "0.3", default_features = false, features = [] }
http = { workspace = true }
opentelemetry = { workspace = true, features = [
  "trace",
], default-features = false }
pin-project-lite = "0.2"
tower = "0.4"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { path = "../tracing-opentelemetry-instrumentation-sdk", features = [
  "http",
], version = "0.18" }

[dev-dependencies]
fake-opentelemetry-collector = { path = "../fake-opentelemetry-collector" }
testing-tracing-opentelemetry = { path = "../testing-tracing-opentelemetry" }
assert2 = "0.3"
hyper = "1"
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
opentelemetry-otlp = { workspace = true, features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry-proto = { workspace = true, features = ["gen-tonic"] }
rstest = "0.18"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
tokio-stream = { version = "0.1", features = ["net"] }
# need tokio runtime to run smoke tests.
opentelemetry_sdk = { workspace = true, features = [
  "trace",
  "rt-tokio",
  "testing",
] }
