[package]
name = "fake-opentelemetry-collector"
description = "A Fake (basic) opentelemetry collector, useful to test what is collected opentelemetry"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "faker", "mock"]
categories = ["development-tools::testing"]
edition.workspace = true
version = "0.17.1"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures = "0.3"
hex = "0.4"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "trace"] }
opentelemetry-proto = { workspace = true, features = ["gen-tonic"] }
# need tokio runtime to run smoke tests.
opentelemetry_sdk = { workspace = true, features = [
  "trace",
  "rt-tokio",
  "testing",
] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.27", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.9" #should be sync with opentelemetry-proto
tracing = { workspace = true }

[dev-dependencies]
assert2 = "0.3"
hyper = "0.14"
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
