[package]
name = "fake-opentelemetry-collector"
description = "A Fake (basic) opentelemetry collector, useful to test what is collected opentelemetry"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "faker", "mock"]
categories = ["development-tools::testing"]
edition.workspace = true
version = "0.19.0"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures = "0.3"
hex = "0.4"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
  "logs",
  "trace",
] }
opentelemetry-proto = { workspace = true, features = [
  "gen-tonic",
  "logs",
  "trace",
] }
# need tokio runtime to run smoke tests.
opentelemetry_sdk = { workspace = true, features = [
  "trace",
  "rt-tokio",
  "testing",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert2 = "0.3"
insta = { version = "1.39.0", features = ["yaml", "redactions"] }
