[package]
name = "fake-opentelemetry-collector"
description = "A Fake (basic) opentelemetry collector, useful to test what is collected opentelemetry"
readme = "README.md"
keywords = ["tracing", "opentelemetry", "faker", "mock"]
categories = ["development-tools::testing"]
edition.workspace = true
version = "0.27.0"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures = "0.3"
hex = "0.4"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
  "logs",
  "trace",
] }
opentelemetry-proto = { workspace = true, features = [
  "gen-tonic",
  "logs",
  "trace",
] }
# need tokio runtime to run smoke tests.
opentelemetry_sdk = { workspace = true, features = [
  "trace",
  "rt-tokio",
  "testing",
] }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["codegen", "transport"]}
tracing = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
insta = { workspace = true }
