[package]
name = "testing-tracing-opentelemetry"
description = "helpers to help testing app + tracing + opentelemetry."
readme = "README.md"
keywords = ["tracing", "opentelemetry"]
categories = ["development-tools::testing"]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/testing-tracing-opentelemetry"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert2 = "0.3"
fake-opentelemetry-collector = { path = "../fake-opentelemetry-collector", version = "0.13.0" }
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
opentelemetry = "0.20"
opentelemetry_api = "0.20"
serde_json = "1.0.79"
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
