[package]
name = "testing-tracing-opentelemetry"
description = "helpers to help testing app + tracing + opentelemetry."
readme = "README.md"
keywords = ["tracing", "opentelemetry"]
categories = ["development-tools::testing"]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/tree/main/testing-tracing-opentelemetry"
publish = false
edition.workspace = true
version = "0.19.0"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert2 = "0.3"
fake-opentelemetry-collector = { path = "../fake-opentelemetry-collector", version = "0.19" }
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde_json = "1.0.79"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
