[package]
name = "testing-tracing-opentelemetry"
description = "helpers to help testing app + tracing + opentelemetry."
readme = "README.md"
keywords = ["tracing", "opentelemetry"]
categories = ["development-tools::testing"]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/tree/main/testing-tracing-opentelemetry"
publish = false
edition.workspace = true
version = "0.19.0"
repository.workspace = true
license.workspace = true

[dependencies]
assert2 = { workspace = true }
fake-opentelemetry-collector = { path = "../fake-opentelemetry-collector", version = "0.33" }
insta = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
