[package]
name = "tonic-tracing-opentelemetry"
description = "Middlewares and tools to integrate tonic + tracing + opentelemetry."
readme = "README.md"
keywords = ["tonic", "tracing", "opentelemetry"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "web-programming",
]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/tree/main/tonic-tracing-opentelemetry"
edition.workspace = true
version = "0.19.0"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-core = "0.3"
futures-util = { version = "0.3", default_features = false, features = [] }
http = "1.1"
http-body = "1.0"
hyper = "1.4"
opentelemetry = { workspace = true }
pin-project-lite = "0.2"
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", default-features = false }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { path = "../tracing-opentelemetry-instrumentation-sdk", features = [
  "http",
], version = "0.19" }

[dev-dependencies]
axum = "0.7"
testing-tracing-opentelemetry = { path = "../testing-tracing-opentelemetry" }
fake-opentelemetry-collector = { path = "../fake-opentelemetry-collector" }
assert2 = "0.3"
hyper = "1.4"
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
opentelemetry-otlp = { workspace = true, features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry-proto = { workspace = true, features = ["gen-tonic"] }
rstest = "0.22"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.27", features = ["full"] }
tower = "0.5"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
tokio-stream = { version = "0.1", features = ["net"] }
# need tokio runtime to run smoke tests.
opentelemetry_sdk = { workspace = true, features = [
  "trace",
  "rt-tokio",
  "testing",
] }

[features]
default = []
# to use level `info` instead of `trace` to create otel span
tracing_level_info = []
