[package]
name = "tracing-opentelemetry-instrumentation-sdk"
description = "A set of helpers to build OpenTelemetry instrumentation based on `tracing` crate."
readme = "README.md"
keywords = ["tracing", "opentelemetry"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "web-programming",
]
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
http = { workspace = true, optional = true }
# opentelemetry-semantic-conventions = { version = "0.11" }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
assert2 = "0.3"
rstest = "0.18"

[features]
default = []
http = ["dep:http"]
