[package]
name = "tracing-opentelemetry-instrumentation-sdk"
description = "A set of helpers to build OpenTelemetry instrumentation based on `tracing` crate."
readme = "README.md"
keywords = ["tracing", "opentelemetry"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "web-programming",
]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/tree/main/tracing-opentelemetry-instrumentation-sdk"
edition.workspace = true
version = "0.19.0"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
http = { workspace = true, optional = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
assert2 = "0.3"
rstest = "0.22"

[features]
default = []
http = ["dep:http"]
# to use level `info` instead of `trace` to create otel span
tracing_level_info = []
