[package]
name = "tracing-opentelemetry-instrumentation-sdk"
description = "A set of helpers to build OpenTelemetry instrumentation based on `tracing` crate."
readme = "README.md"
keywords = ["tracing", "opentelemetry"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "web-programming",
]
homepage = "https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/tree/main/tracing-opentelemetry-instrumentation-sdk"
edition.workspace = true
version = "0.32.1"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
http = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = [
  "semconv_experimental",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
rstest = { workspace = true }

[features]
default = []
http = ["dep:http"]
# to use level `info` instead of `trace` to create otel span
tracing_level_info = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docs_rs)'] }
