[package]
name = "examples-axum-otlp"
version = "0.15.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
axum-tracing-opentelemetry = { path = "../../axum-tracing-opentelemetry" }
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", optional = true }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk" }

[features]
otlp-over-http = [
  "opentelemetry-otlp/reqwest-client",
  "opentelemetry-otlp/reqwest-rustls",
  "opentelemetry-otlp/http-proto",
  "opentelemetry-otlp/tls",
]
