[package]
name = "bug_234_tls"
publish = false
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, default-features = true }
axum-tracing-opentelemetry = { path = "../../axum-tracing-opentelemetry" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
    "otlp",
    "tracing_subscriber_ext",
    "tls",
] }
tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk", features = [
    "http",
] }
# opentelemetry = { version = "0.29.1", features = ["metrics"] }
